major tests refactoring